# zenV2

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  PRODUCTION.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.githooks/: post-commit
.github/workflows/: ci.yml  production-smoke.yml  release.yml  windows-release-cache.yml
api/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
api/_lib/: assistant.test.ts  assistant.ts  assistantData.test.ts  assistantData.ts  assistantGoogle.ts  db.ts  (+23 more)
browser-extension/: README.md  manifest.json  popup.html  popup.js
docs/: improvement-backlog.md  zen-capabilities.md
release-notes/: 0.2.0.md  0.2.1.md  0.2.10.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.2.7.md  0.2.8.md  0.2.9.md  3.0.0.md  3.0.1.md  3.0.2.md  3.0.3.md  3.0.4.md  3.0.5.md  3.0.6.md  3.0.7.md  3.0.8.md  3.0.9.md  3.1.0.md  3.1.1.md  3.2.0.md  3.2.1.md  3.2.2.md  3.3.0.md  3.3.1.md  3.3.2.md  3.3.3.md  3.3.4.md  3.3.6.md  3.3.7.md  3.4.0.md  3.4.1.md  3.4.10.md  3.4.11.md  3.4.12.md  3.4.13.md  3.4.2.md  3.4.3.md  (+12 more)
scripts/: configure-windows-signing.mjs  gen-icon.cjs  gen-release-note.mjs  smoke-production.mjs  sync-version.mjs  version.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  SETUP.md  build.rs  google_oauth.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  icloud.rs  lib.rs  macos_calendar.rs  main.rs
(+263 files in other folders)
