[package]
name = "zen"
version = "0.0.0"
description = "Zen — focus notes"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Default TLS = native (schannel on Windows / Secure Transport on macOS) — no
# C-crypto build deps. Swap to rustls-tls if you prefer a bundled stack.
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Windows-only credential backend (matches this dev machine). For macOS/Linux
# builds swap to "apple-native" / "sync-secret-service" — see SETUP.md.
keyring = { version = "3", features = ["windows-native"] }
tiny_http = "0.12"
open = "5"
rand = "0.8"
url = "2"
